--- a/src/config.yaml
+++ b/src/config.yaml
@@ -20,7 +20,7 @@ body:
  - 
   - andrill
   - 
-    - Andrill
+    - "Development of an age-depth model for ANDRILL MIS AND-1B drill core, McMurdo Sound, Antarctica"
  - 
   - minna_bluff 
   -
@@ -42,7 +42,7 @@ body:
  - 
   - diode
   - 
-   - Development and Testing of a laser micro furnace for Ar-Ar analysis
+   - "Development and Testing of a laser micro furnace for Ar-Ar analysis"
    - 
     - Design
     - Testing
