--- a/data/minnabluff/ic_unknowns.yaml
+++ b/data/minnabluff/ic_unknowns.yaml
@@ -30,13 +30,13 @@ identifiers:
 #- 61599
 #- 61600
 
-#- 61601
-- 61602
-#- 61607
-#- 61608
-#- 61603
-#- 61604
-#- 61605
+#- 61601 #problem
+#- 61602
+#- 61607 #problem
+#- 61608 
+- 61603
+- 61604
+- 61605
 #- 61606
 #- 61609
 #- 61610
