--- a/data/minnabluff/ic_unknowns.yaml
+++ b/data/minnabluff/ic_unknowns.yaml
@@ -34,12 +34,12 @@ identifiers:
 #- 61602
 #- 61607 #problem
 #- 61608 
-- 61603
-- 61604
-- 61605
-#- 61606
-#- 61609
-#- 61610
+#- 61603
+#- 61604
+#- 61605
+- 61606
+#- 61609 #problem
+- 61610
 #- 61611
 #- 61612
 
